# MoE-LoRA-inference

./: .gitignore  pyproject.toml  test_vllm.py  train_lora.py
src/moe_lora_inference/: __init__.py  inference_lora.py  inference_vllm.py  train_lora.py
src/moe_lora_inference/lora_adapters/powermoe-3b/checkpoint-2500/: README.md  adapter_config.json
